<resources>
    <string name="app_name">SpecialCalculator</string>
    <string name="result">result</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="plus">+</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="subtract">-</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="divide">/</string>
    <string name="decimal">.</string>
    <string name="_0">0</string>
    <string name="Equal">=</string>
    <string name="multiply">*</string>


    <string name="c">C</string>
    <string name="comma">,</string>
    <string name="mode">MODE</string>
    <string name="mean">MEAN</string>
    <string name="median">MEDIAN</string>
    <string name="simple_calcutor">Simple Calcutor</string>
    <string name="advanced_calculator">Advanced Calculator</string>
    <string name="android_calculator">Android Calculator</string>


</resources>