<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdvancedCalc"
    android:background="@android:color/holo_red_dark"
    >

    <EditText
        android:id="@+id/resultAdvanced"
        android:layout_width="356dp"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="30dp"
        android:background="@android:color/white"
        android:text=""
        android:textColorLink="#673AB7"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="41dp"
        android:layout_marginRight="48dp"
        />

    <!--Number 1 Button-->
    <Button
        android:id="@+id/Button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/resultAdvanced"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/_1"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <!--Number 2 Button-->
    <Button
        android:id="@+id/Button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/resultAdvanced"
        android:layout_marginStart="110dp"
        android:layout_marginEnd="110dp"
        android:text="@string/_2"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <!--Number 3 Button-->
    <Button
        android:id="@+id/Button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/resultAdvanced"
        android:layout_marginStart="210dp"
        android:layout_marginEnd="210dp"
        android:textSize="30sp"
        android:text="@string/_3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <!---Mode Button-->
    <Button
        android:id="@+id/ModeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/resultAdvanced"
        android:layout_marginStart="300dp"
        android:layout_marginEnd="300dp"
        android:textSize="25sp"
        android:height="58dp"
        android:text="@string/mode"
        android:width="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <!---Number Four-->
    <Button
        android:id="@+id/Button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Button1"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:textSize="30sp"
        android:text="@string/_4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <!--Number Five-->
    <Button
        android:id="@+id/Button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Button2"
        android:layout_marginStart="110dp"
        android:layout_marginEnd="110dp"
        android:text="@string/_5"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--Number Six-->
    <Button
        android:id="@+id/Button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/Button3"
        android:layout_marginStart="210dp"
        android:layout_marginEnd="210dp"
        android:textSize="30sp"
        android:text="@string/_6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <!--Mean Button-->
    <Button
        android:id="@+id/MeanButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/MedianButton"
        android:layout_marginStart="300dp"
        android:layout_marginEnd="300dp"
        android:textSize="25sp"
        android:text="@string/mean"
        android:width="100dp"
        android:height="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <!--Number Seven-->
    <Button
        android:id="@+id/Button7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Button4"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/_7"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--Number Eight-->
    <Button
        android:id="@+id/Button8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Button5"
        android:layout_marginStart="110dp"
        android:layout_marginEnd="110dp"
        android:text="@string/_8"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <!--Number Nine-->
    <Button
        android:id="@+id/Button9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/Button6"
        android:layout_marginStart="210dp"
        android:layout_marginEnd="210dp"
        android:textSize="30sp"
        android:text="@string/_9"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <!--Median Button-->
    <Button
        android:id="@+id/MedianButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ModeButton"
        android:layout_marginStart="300dp"
        android:layout_marginEnd="300dp"
        android:textSize="20sp"
        android:text="@string/median"
        android:height="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <!--Decimal Button-->
    <Button
        android:id="@+id/ButtonDecimal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Button7"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:textSize="25sp"
        android:text="@string/decimal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <!--Number Zero-->
    <Button
        android:id="@+id/Button0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Button8"
        android:layout_marginStart="110dp"
        android:layout_marginEnd="110dp"
        android:text="@string/_0"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <!--Equal Button-->
    <Button
        android:id="@+id/ButtonEqual"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/Button9"
        android:layout_marginStart="210dp"
        android:layout_marginEnd="210dp"
        android:textSize="25sp"
        android:text="@string/Equal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <!--Comma Button-->
    <Button
        android:id="@+id/CommaButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/MeanButton"
        android:layout_marginStart="300dp"
        android:layout_marginEnd="300dp"
        android:textSize="25sp"
        android:width="100dp"
        android:text="@string/comma"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <!--Remove Button-->
    <Button
        android:id="@+id/ButtonRemove"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ButtonDecimal"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:textSize="50sp"
        android:text=">"
        android:width="200dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="HardcodedText" />

    <!---Clear Button-->
    <Button
        android:id="@+id/ClearButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ButtonEqual"
        android:layout_marginStart="210dp"
        android:layout_marginEnd="210dp"
        android:textSize="50sp"
        android:text="@string/c"
        android:width="190dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/RetrieveResult"
        android:layout_width="356dp"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="30dp"
        android:layout_below="@id/ClearButton"
        android:background="@android:color/white"
        android:text=""
        android:textColorLink="#673AB7"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="41dp"
        android:layout_marginRight="48dp"
        />
</RelativeLayout>

